# auxilium

./: .gitignore  Cargo.toml  Commands.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/backend/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/backend/icons/: icon.icns
crates/backend/src/: main.rs
crates/frontend/: package.json  vite.config.ts.timestamp-1660048399222.mjs
crates/frontend/bundle/dev/: index.html
crates/frontend/bundle/prod/: index.html
crates/frontend/src/: App.tsx  index.css  store.ts
crates/frontend/src/components/: Card.tsx  EventHandler.tsx  Max.tsx  Searchbar.tsx  Toggle.tsx
crates/frontend/src/functions/: customCap.ts  getItems.ts  getSaved.ts  stringToColour.ts
crates/frontend/src/pages/: Root.tsx  Settings.tsx
crates/frontend/src/types/: SavedData.ts  SearchApiResult.ts
